add the first recipe to the website
add the beef wellington recipe to the website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/beef-wellington.html">Beef Wellington Recipe</a>
     </body>
 </html>
