add the second recipe webpage
adds the vanilla creme brulee recipe to the website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/beef-wellington.html">Beef Wellington Recipe</a>
+        <ul>
+            <li><a href="./recipes/beef-wellington.html">Beef Wellington Recipe</a></li>
+            <li><a href="./recipes/vanilla-creme-brulee.html">Vanilla Crème Brûlée</a></li>
+            <li><a href="./recipes/greek-salad.html">Greek Salad</a></li>
+        </ul>
     </body>
 </html>
