add style to the homepage with css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/beef-wellington.html">Beef Wellington Recipe</a></li>
-            <li><a href="./recipes/vanilla-creme-brulee.html">Vanilla Crème Brûlée</a></li>
-            <li><a href="./recipes/greek-salad.html">Greek Salad</a></li>
-        </ul>
+        <h1 class="header">Odin Recipes</h1>
+        <div class="dv1">
+            <p><a class="receita" href="./recipes/beef-wellington.html">Beef Wellington Recipe</a></p>
+            <p><a class="receita" href="./recipes/vanilla-creme-brulee.html">Vanilla Crème Brûlée</a></p>
+            <p><a class="receita" href="./recipes/greek-salad.html">Greek Salad</a></p>
+        </div>
     </body>
 </html>
