add basic css properties to the recipes

--- a/recipes/beef-wellington.html
+++ b/recipes/beef-wellington.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>Beef Wellington Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Beef Wellington</h1>
         <img src="../img/beef-wellington.jpg">
-        <h2>Description:</h2>
+        <h2 class="des">Description</h2>
         <p>A famous chef version of the beef wellington recipe, it is a delicious dish for special occasions.</p>
         <h2>Ingredients:</h2>
         <ul>
