--- a/recipes/vanilla-creme-brulee.html
+++ b/recipes/vanilla-creme-brulee.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>Vanilla Crème Brûlée Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Vanilla Crème Brûlée Recipe</h1>
         <img src="../img/creme-brulee.jpeg">
-        <h2>Description:</h2>
+        <h2 class="des">Description</h2>
         <p>A simple and quick recipe with little quantity of ingredients that makes an elegant dessert.</p>
         <h2>Ingredients:</h2>
         <ul>
