--- a/recipes/greek-salad.html
+++ b/recipes/greek-salad.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>Greek Salad Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Greek Salad Recipe</h1>
         <img src="../img/greek-salad.jpeg">
-        <h2>Description:</h2>
+        <h2 class="des">Description</h2>
         <p>A refreshing mediterranean recipe, the greek salad is simple but very tasty.</p>
         <h2>Ingredients:</h2>
         <ul>
